tests/parser_samples/invalid/microinstruction_with_label/3.mas
%i a {
    a
    b:
    a
    |
    c;
}